# cpp-yolo-object-detector

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCKER_README.md  Dockerfile  PERFORMANCE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
include/: input.h
model/: getModel.sh
src/: input.cpp  main.cpp
